set .button-lightblue to width: 16rem to fix width issue for mobile

--- a/style.css
+++ b/style.css
@@ -613,6 +613,7 @@ header .menuButton:hover .bar2 {
 }
 .button.button-lightblue {
 	background-color: #58B0E3;
+	width: 16rem;
 }
 .button::after {
 	content: '';
