--- a/src/assets/sass/styles.scss
+++ b/src/assets/sass/styles.scss
@@ -918,7 +918,7 @@ header .menuButton:hover .bar2 {
   width: 100%;
 }
 
-.image-block > img {
+.image-block img {
   -o-object-fit: contain;
   object-fit: contain;
   -o-object-position: top right;
