adjusted founder cards for mobile

--- a/src/assets/sass/styles.scss
+++ b/src/assets/sass/styles.scss
@@ -1123,6 +1123,11 @@ header .menuButton:hover .bar2 {
 
   .founder-card-icon {
     width: 17rem !important;
+    margin: 0 auto;
+  }
+
+  .founder-name {
+    text-align: center;
   }
 
 }
