--- a/src/assets/sass/styles.scss
+++ b/src/assets/sass/styles.scss
@@ -137,9 +137,9 @@ select {
 }
 
 button,
-html input[type="button"],
-input[type="reset"],
-input[type="submit"] {
+html input[type='button'],
+input[type='reset'],
+input[type='submit'] {
   -webkit-appearance: button;
   cursor: pointer;
 }
@@ -159,24 +159,24 @@ input {
   line-height: normal;
 }
 
-input[type="checkbox"],
-input[type="radio"] {
+input[type='checkbox'],
+input[type='radio'] {
   box-sizing: border-box;
   padding: 0;
 }
 
-input[type="number"]::-webkit-inner-spin-button,
-input[type="number"]::-webkit-outer-spin-button {
+input[type='number']::-webkit-inner-spin-button,
+input[type='number']::-webkit-outer-spin-button {
   height: auto;
 }
 
-input[type="search"] {
+input[type='search'] {
   -webkit-appearance: textfield;
   box-sizing: content-box;
 }
 
-input[type="search"]::-webkit-search-cancel-button,
-input[type="search"]::-webkit-search-decoration {
+input[type='search']::-webkit-search-cancel-button,
+input[type='search']::-webkit-search-decoration {
   -webkit-appearance: none;
 }
 
@@ -209,7 +209,6 @@ th {
   padding: 0;
 }
 
-
 /*
 
 	FONTS
@@ -239,14 +238,13 @@ th {
   font-style: normal;
 }
 
-
 html {
   font-size: 62.5%;
 }
 
 body {
-  font-family: "wavehaus-web", Arial, sans-serif;
-  color: #00529C;
+  font-family: 'wavehaus-web', Arial, sans-serif;
+  color: #00529c;
   background: white;
   width: 100%;
   font-size: 1.8rem;
@@ -279,11 +277,10 @@ h1,
 .h1 {
   margin: 0;
   font-weight: bold;
-  color: #00519B;
+  color: #00519b;
 }
 
 @media (max-width: 1000px) {
-
   h1,
   .h1 {
     letter-spacing: -0.03rem;
@@ -294,7 +291,6 @@ h1,
 }
 
 @media (min-width: 1001px) {
-
   h1,
   .h1 {
     letter-spacing: -0.08rem;
@@ -308,11 +304,10 @@ h2,
 .h2 {
   margin: 0;
   font-weight: bold;
-  color: #00845D;
+  color: #00845d;
 }
 
 @media (max-width: 1000px) {
-
   h2,
   .h2 {
     letter-spacing: -0.008rem;
@@ -323,7 +318,6 @@ h2,
 }
 
 @media (min-width: 1001px) {
-
   h2,
   .h2 {
     letter-spacing: -0.02rem;
@@ -338,11 +332,10 @@ h3,
   margin: 0;
   margin-bottom: 2rem;
   font-weight: bold;
-  color: #00519B;
+  color: #00519b;
 }
 
 @media (max-width: 1000px) {
-
   h3,
   .h3 {
     letter-spacing: -0.008rem;
@@ -353,7 +346,6 @@ h3,
 }
 
 @media (min-width: 1001px) {
-
   h3,
   .h3 {
     letter-spacing: -0.008rem;
@@ -387,7 +379,7 @@ b {
 }
 
 p.tagline {
-  color: #A6CE39;
+  color: #a6ce39;
   font-weight: bold;
   text-transform: uppercase;
   letter-spacing: -0.015rem;
@@ -397,7 +389,7 @@ p.tagline {
 }
 
 p.intro {
-  color: #58AFE2;
+  color: #58afe2;
   font-weight: 500;
   font-size: 2.4rem;
   line-height: 1.16;
@@ -413,13 +405,15 @@ p.intro {
 }
 
 a {
-  -webkit-transition: color 0.1s ease-in, background-color 0.1s ease-in, border-color 0.1s ease-in;
-  -moz-transition: color 0.1s ease-in, background-color 0.1s ease-in, border-color 0.1s ease-in;
-  -o-transition: color 0.1s ease-in, background-color 0.1s ease-in, border-color 0.1s ease-in;
-  transition: color 0.1s ease-in, background-color 0.1s ease-in, border-color 0.1s ease-in;
+  -webkit-transition: color 0.1s ease-in, background-color 0.1s ease-in,
+    border-color 0.1s ease-in;
+  -moz-transition: color 0.1s ease-in, background-color 0.1s ease-in,
+    border-color 0.1s ease-in;
+  -o-transition: color 0.1s ease-in, background-color 0.1s ease-in,
+    border-color 0.1s ease-in;
+  transition: color 0.1s ease-in, background-color 0.1s ease-in,
+    border-color 0.1s ease-in;
 }
-
-
 
 /*
 
@@ -455,7 +449,6 @@ a {
     width: 1070px;
   }
 }
-
 
 /*
 
@@ -532,7 +525,7 @@ nav.main ul li {
 
 nav.main ul li a {
   text-decoration: none;
-  color: #00529C;
+  color: #00529c;
   font-size: 1.6rem;
   line-height: 1em;
   font-weight: bold;
@@ -540,13 +533,13 @@ nav.main ul li a {
 }
 
 nav.main ul li a.current-page {
-  color: #00845D;
+  color: #00845d;
   padding-bottom: 0.2rem;
-  border-bottom: 2px solid #00845D;
+  border-bottom: 2px solid #00845d;
 }
 
 nav.main ul li a:hover {
-  color: #00845D;
+  color: #00845d;
 }
 
 .navigation-mobile {
@@ -578,7 +571,7 @@ nav.mobile ul li {
 
 nav.mobile ul li a {
   text-decoration: none;
-  color: #00529C;
+  color: #00529c;
   font-size: 2rem;
   line-height: 1em;
   font-weight: bold;
@@ -586,11 +579,11 @@ nav.mobile ul li a {
 }
 
 nav.mobile ul li a.current-page {
-  color: #00845D;
+  color: #00845d;
 }
 
 nav.mobile ul li a:hover {
-  color: #00845D;
+  color: #00845d;
 }
 
 header .menuButton {
@@ -629,7 +622,7 @@ header .menuButton {
 header .menuButton .bar {
   height: 0.4rem;
   width: 2.5rem;
-  background: #00529C;
+  background: #00529c;
   border-radius: 4px;
   -webkit-transition: all 0.15s ease-in-out 0s;
   transition: all 0.15s ease-in-out 0s;
@@ -660,7 +653,7 @@ header .menuButton .bar.bar2 {
 }
 
 header .menuButton:hover .bar {
-  background-color: #00845D;
+  background-color: #00845d;
 }
 
 header .menuButton:hover .bar1 {
@@ -700,14 +693,14 @@ header .menuButton:hover .bar2 {
 */
 
 .button {
-  box-shadow: 0px 4px 20px rgba(0, 0, 0, .2);
+  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.2);
   border-radius: 50px;
   padding: 1.5rem 6rem 1.5rem 3rem;
   font-size: 2rem;
   font-weight: bold;
   line-height: 1;
-  background-color: #00529C;
-  color: #FFF;
+  background-color: #00529c;
+  color: #fff;
   text-decoration: none;
   display: inline-block;
   overflow: hidden;
@@ -725,15 +718,15 @@ header .menuButton:hover .bar2 {
 }
 
 .button.button-blue {
-  background-color: #00529C;
+  background-color: #00529c;
 }
 
 .button.button-green {
-  background-color: #00845D;
+  background-color: #00845d;
 }
 
 .button.button-lightblue {
-  background-color: #58B0E3;
+  background-color: #58b0e3;
   width: 16rem;
 }
 
@@ -783,15 +776,15 @@ header .menuButton:hover .bar2 {
 }
 
 .button.button-blue::before {
-  background: #00388A;
+  background: #00388a;
 }
 
 .button.button-green::before {
-  background: #0B6C50;
+  background: #0b6c50;
 }
 
 .button.button-lightblue::before {
-  background: #3D97CC;
+  background: #3d97cc;
 }
 
 @media (max-width: 748px) {
@@ -812,7 +805,6 @@ header .menuButton:hover .bar2 {
   }
 }
 
-
 /*
 
 	HIGHLIGHT BG
@@ -830,11 +822,11 @@ header .menuButton:hover .bar2 {
 }
 
 .highlight-blue {
-  background-color: #00529C;
+  background-color: #00529c;
 }
 
 .highlight-green {
-  background-color: #00845D;
+  background-color: #00845d;
 }
 
 @media (min-width: 749px) and (max-width: 1000px) {
@@ -848,7 +840,6 @@ header .menuButton:hover .bar2 {
     min-height: 600px;
   }
 }
-
 
 /*
 
@@ -869,24 +860,24 @@ header .menuButton:hover .bar2 {
   position: relative;
   padding: 2rem;
   padding-top: 2.5rem;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   z-index: 3;
 }
 
 .text-content a {
-  color: #00845D;
+  color: #00845d;
   text-decoration: underline;
 }
 
 .text-content a:hover {
-  color: #00529C;
+  color: #00529c;
   text-decoration: none;
 }
 
 .image-block {
   z-index: 2;
   background: transparent;
-  box-shadow: 0px 5px 20px rgba(0, 0, 0, .25);
+  box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.25);
   max-height: 500px;
   overflow: hidden;
   padding-bottom: 0;
@@ -899,7 +890,7 @@ header .menuButton:hover .bar2 {
 .image-block-fixed {
   z-index: 2;
   background: transparent;
-  box-shadow: 0px 5px 20px rgba(0, 0, 0, .25);
+  box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.25);
   max-height: 500px;
   overflow: hidden;
   padding-bottom: 0;
@@ -928,7 +919,7 @@ header .menuButton:hover .bar2 {
 }
 
 .white-bg {
-  background-color: #FFFFFF;
+  background-color: #ffffff;
 }
 
 .rounded-topleft {
@@ -1005,7 +996,6 @@ header .menuButton:hover .bar2 {
   }
 }
 
-
 /*
 
 	SECTION HERO
@@ -1027,7 +1017,6 @@ header .menuButton:hover .bar2 {
   }
 }
 
-
 /*
 
 	SECTION QUOTE
@@ -1042,7 +1031,7 @@ header .menuButton:hover .bar2 {
   position: relative;
   padding: 2rem;
   padding-top: 2.5rem;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   width: 80%;
   margin: 0 auto;
 }
@@ -1051,7 +1040,7 @@ header .menuButton:hover .bar2 {
   font-size: 2.6rem;
   line-height: 1.2;
   font-weight: bold;
-  color: #00529C;
+  color: #00529c;
   margin-bottom: 4rem;
 }
 
@@ -1098,7 +1087,7 @@ header .menuButton:hover .bar2 {
 
 .quote-author-name {
   margin-left: 2rem;
-  color: #58B0E3;
+  color: #58b0e3;
   font-size: 1.6rem;
   line-height: 1.2;
   align-items: center;
@@ -1109,23 +1098,21 @@ header .menuButton:hover .bar2 {
   padding: 0;
 }
 
-
 /*
 
 	CARDS GENERAL
 
 */
 
-
 @media (min-width: 320px) and (max-width: 767px) {
   .story .mission .team {
     margin-top: 40% !important;
-  } 
+  }
 
   .founder-cards {
     display: block !important;
   }
-  
+
   .founder-card-container {
     width: 100% !important;
     margin: 20px 0 !important;
@@ -1148,9 +1135,7 @@ header .menuButton:hover .bar2 {
     position: relative;
     top: 12px;
   }
-
 }
-
 
 @media (min-width: 768px) and (max-width: 1000px) {
   .meet {
@@ -1160,7 +1145,7 @@ header .menuButton:hover .bar2 {
   .founder-cards {
     display: flex !important;
   }
-  
+
   .founder-card-container {
     width: calc(33.3% - 1.5rem) !important;
     margin: 10px;
@@ -1184,19 +1169,21 @@ header .menuButton:hover .bar2 {
     position: relative;
     top: 15px;
   }
-
 }
-
-
-
 
 .founder-cards {
   display: flex;
+  // flex-flow: row wrap;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 .founder-card-container {
-  width: calc(36% - 1.5em);
+  width: calc(56% - 1.5em);
   margin: 10px 0 10px 20px;
+  padding: 2rem;
+  background-color: #ffffff;
+  box-shadow: 0 5px 40px rgba(0, 0, 0, 0.1);
 }
 
 .founder-name {
@@ -1215,7 +1202,7 @@ header .menuButton:hover .bar2 {
 }
 
 .card-container {
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   box-shadow: 0 5px 40px rgba(0, 0, 0, 0.1);
   padding: 2rem;
   margin-bottom: 2rem;
@@ -1223,12 +1210,12 @@ header .menuButton:hover .bar2 {
 }
 
 .card-container.card-active {
-  background-color: #00529C;
-  color: #FFFFFF;
+  background-color: #00529c;
+  color: #ffffff;
 }
 
 .card-container.card-active .card-title h3 {
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
 .card-text {
@@ -1267,8 +1254,8 @@ header .menuButton:hover .bar2 {
 }
 
 .team {
-  margin-top: 15%;
   margin-bottom: 3rem;
+  position: relative;
 }
 
 @media (min-width: 749px) {
@@ -1287,7 +1274,6 @@ header .menuButton:hover .bar2 {
     font-weight: 158;
     font-size: 30px;
   }
-
 }
 
 /*
@@ -1334,28 +1320,41 @@ header .menuButton:hover .bar2 {
     top: 0;
   }
 }
- /*
+/*
 
   SECTION THE TEAM
 
 */
 
-.container .team{
-  z-index: 9;
+.container .team {
+  margin: 3rem;
+  // z-index: 9;
   position: relative;
+}
+
+.team .card-container {
+  padding-top: 1rem;
 }
 
 .team .particle-bg {
   z-index: 0;
   content: '';
-  height: 50rem;
+  height: 150rem;
   position: absolute;
   width: 100%;
-  overflow: hidden;
-  top: 8rem;
+  // overflow: hidden;
+  top: 1rem;
   background: url('../../../static/img/green-shape-bg.png') no-repeat 0 0;
-  background-size: 70rem;
+  background-size: 120rem;
   background-position: center center;
+  z-index: -1;
+}
+
+.team-cards {
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
 }
 
 /* THIS IS HERE FOR COMPARISON
@@ -1417,7 +1416,6 @@ header .menuButton:hover .bar2 {
     top: 0;
   }
 }
-
 
 /*
 
@@ -1494,7 +1492,6 @@ header .menuButton:hover .bar2 {
     top: 20rem;
   }
 }
-
 
 /*
 
@@ -1595,60 +1592,88 @@ header .menuButton:hover .bar2 {
   }
 }
 
-
 /*
 
 	FOOTER
 
 */
 
+.footer-container {
+  display: flex;
+  flex-flow: column nowrap;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  // border: solid green 5px;
+  background-color: #ffffff;
+  margin-top: 30rem;
+}
+
 .footer {
   position: relative;
-  margin-top: 6rem;
+  left: 0;
+  bottom: -10px;
+  width: 100%;
+  background-color: #ffffff;
+  // border: solid green 3px;
 }
 
 .footer-content {
-  display: flex;
   position: relative;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: flex-start;
+  bottom: 0;
+  // border: solid purple 10px;
+  display: flex;
+  // position: relative;
+  height: 300px;
+  min-width: 50%;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: flex-end;
+  margin: 2rem;
 }
 
 .footer-partners {
-  width: 100%;
   display: flex;
-  position: relative;
-  flex-direction: row;
-  flex-wrap: wrap;
+  flex-flow: row nowrap;
+  justify-content: space-evenly;
   align-items: center;
-  padding: 2rem;
-  padding-bottom: 2rem;
+  width: 50%;
+  // min-width: 50%;
+  // min-height: 80%;
+  // align-items: center;
+  margin: 3rem;
+  // border: dashed black 1px;
 }
 
 .partner-logo {
   width: 20%;
-  margin-right: 3rem;
-  margin-bottom: 3rem;
+  // min-width: 20%;
+  margin-right: 2rem;
+  margin-bottom: 2rem;
+  padding: 2rem;
 }
 
 .footer-contact {
-  padding: 2rem;
-  width: 100%;
-  z-index: 2;
   position: relative;
-  background-color: #FFFFFF;
+  bottom: 0;
+  height: 300px;
+  padding: 2rem;
+  min-width: 200px;
+  z-index: 2;
+  background-color: #ffffff;
   margin-bottom: 4rem;
-  margin-top: 0;
+  // border: solid royalblue 4px;
 }
 
 .footer-contact-container {
   display: flex;
-  position: relative;
-  flex-direction: column;
-  flex-wrap: nowrap;
-  justify-content: space-between;
+  flex-flow: row wrap;
+  min-width: 100%;
+  justify-content: center;
+  align-items: center;
   margin-bottom: 3rem;
+  // border: solid black 2px;
 }
 
 .footer-contact-details {
@@ -1672,7 +1697,7 @@ header .menuButton:hover .bar2 {
 
 .footer-title h3 {
   text-transform: uppercase;
-  color: #A6CE39;
+  color: #a6ce39;
   font-size: 1.8rem;
   line-height: 1;
 }
@@ -1694,12 +1719,12 @@ header .menuButton:hover .bar2 {
 }
 
 .footer-links a {
-  color: #00529C;
+  color: #00529c;
   text-decoration: none;
 }
 
 .footer-links a:hover {
-  color: #00845D;
+  color: #00845d;
   text-decoration: none;
 }
 
@@ -1717,7 +1742,7 @@ header .menuButton:hover .bar2 {
 .footer-legal {
   z-index: 1;
   position: relative;
-  color: #FFFFFF;
+  color: #ffffff;
   padding-bottom: 3rem;
   font-size: 1.4rem;
   line-height: 1.125rem;
@@ -1729,24 +1754,38 @@ header .menuButton:hover .bar2 {
 
 .footer-legal a {
   text-decoration: underline;
-  color: #FFFFFF;
+  color: #ffffff;
   margin-right: 1rem;
 }
 
 .footer-legal a:hover {
   text-decoration: none;
-  color: #58B0E3;
+  color: #58b0e3;
 }
-
+@media (max-width: 500px) {
+  .footer-partners {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    min-width: 100%;
+  }
+  .partner-logo {
+    min-width: 40%;
+  }
+  .footer-container {
+    margin-top: 3rem;
+  }
+}
 @media (min-width: 749px) {
   .footer-partners {
-    width: 40%;
+    min-width: 100%;
   }
 
   .partner-logo {
-    width: 30%;
-    margin-right: 3rem;
-    margin-bottom: 3rem;
+    min-width: 20%;
+    // margin-right: 3rem;
+    // margin-bottom: 3rem;
   }
 
   .footer-content {
@@ -1771,7 +1810,7 @@ header .menuButton:hover .bar2 {
 @media (min-width: 1001px) {
   .partner-logo {
     width: 30%;
-    margin-right: 3rem;
+    // margin-right: 3rem;
     margin-bottom: 3rem;
   }
 
