--- a/src/assets/sass/styles.scss
+++ b/src/assets/sass/styles.scss
@@ -1147,7 +1147,7 @@ header .menuButton:hover .bar2 {
   }
 
   .founder-card-container {
-    width: calc(33.3% - 1.5rem) !important;
+    width: 50%;
     margin: 10px;
   }
 
@@ -1175,11 +1175,11 @@ header .menuButton:hover .bar2 {
   display: flex;
   // flex-flow: row wrap;
   justify-content: space-evenly;
-  align-items: center;
+  align-items: start;
 }
 
 .founder-card-container {
-  width: calc(56% - 1.5em);
+  width: 50%;
   margin: 10px 0 10px 20px;
   padding: 2rem;
   background-color: #ffffff;
