Updated home page image and the about page people

--- a/src/assets/sass/styles.scss
+++ b/src/assets/sass/styles.scss
@@ -1302,6 +1302,7 @@ header .menuButton:hover .bar2 {
   padding: 10px;
 }
 
+
 .leader-card {
   background-color: #ffffff;
   box-shadow: 0 5px 40px rgba(0, 0, 0, 0.1);
@@ -1317,6 +1318,48 @@ header .menuButton:hover .bar2 {
 @media (min-width: 320px) and (max-width: 599px) {
   .leader-cards-grid {
     grid-template-columns: auto;
+  }
+}
+
+/*Remove this to put it back to a 3-column grid*/
+.leader-cards-grid {
+  display: block;
+  
+  .leader-card {
+    margin-bottom: 5rem;
+  }
+  
+  .card-header {
+    display: inline-block;
+    text-align: center;
+    width: 40%;
+    vertical-align: middle;
+    
+    .card-icon {
+      margin: 0 auto;
+    }
+  }
+  
+  .card-list {
+    display: inline-block;
+    width: 60%;
+    vertical-align: middle;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 800px) {
+  .leader-cards-grid {
+    .leader-card {
+      .card-header {
+        display: block;
+        width: 100%;
+      }
+      
+      .card-list {
+        display: block;
+        width: 100%;
+      }
+    }
   }
 }
 
@@ -1605,6 +1648,23 @@ header .menuButton:hover .bar2 {
   background: url('../img/bgshape-lightgreen.svg') no-repeat 0 0;
   background-size: 60rem;
   background-position: center center;
+}
+
+.home-page {
+  .hero {
+    .image-reset {
+      border-radius: 0 !important;
+      box-shadow: none;
+      display: flex;
+      align-items: center;
+      padding-left: 50px;
+      overflow: visible;
+      
+      img {
+        height: auto;
+      }
+    }
+  }
 }
 
 @media (min-width: 749px) {
