--- a/src/assets/sass/styles.scss
+++ b/src/assets/sass/styles.scss
@@ -1672,6 +1672,30 @@ header .menuButton:hover .bar2 {
   }
 }
 
+.farm-page {
+  .image-reset.image-block-fixed {
+    border-radius: 0 !important;
+    box-shadow: none;
+    display: flex;
+    align-items: center;
+    right: -20%;
+    overflow: visible;
+    width: 90%;
+    
+    img {
+      height: auto;
+    }
+  }
+}
+
+@media (max-width: 749px) {
+  .farm-page {
+    .image-reset.image-block-fixed {
+      right: 5%;
+    }
+  }
+}
+
 @media (min-width: 749px) {
   .benefits .particle-bg {
     background-size: 60rem;
