Updated stylesheet to hide the button on the farm page

--- a/src/assets/sass/styles.scss
+++ b/src/assets/sass/styles.scss
@@ -1685,7 +1685,16 @@ header .menuButton:hover .bar2 {
       height: auto;
     }
   }
+  
+  .whatwedo {
+    .container {
+      > .button-c2a {
+        display: none;
+      }
+    }
+  }
 }
+
 
 @media (max-width: 749px) {
   .farm-page {
